Commiting the Script I overhauled a long time ago. Updated the Readme to correspond with my version